# project_gabriel

./: .gitignore  CLAUDE.md  DNP3_README.md  PICOPROBE_SETUP.md  QUICKSTART_PICOPROBE.md  README.md  build.sh  build_cipher_test.sh  build_dnp3.sh  build_hardcoded_test.sh  build_swd.sh  crc16_dnp.v  dnp3_link_layer.v  flash_blink_to_target_pico.sh  flash_with_picoprobe.sh  formal.sby  grammar_fsm.v  icebreaker.pcf  openocd.cfg  program_fpga.sh  requirements.txt  situation_3.mermaid  swd_passthrough.pcf  swd_passthrough_test.v  top_cipher_test.v  top_dnp3.v  top_test.v  top_test_hardcoded.v  xor_cipher.sby  xor_cipher.v
blink/: CMakeLists.txt  blink.c
claude-fpga-helpers/: CLAUDE.md  README.md  blink.c  fpga_build.sh  fpga_full.sh  fpga_upload.sh  icebreaker-template.pcf  read_serial.py  uart_rx.v
docs/: AES_UPGRADE.md  CHACHA20_IMPLEMENTATION.md  QUICK_START_AES.md
formal/: formal.xml  logfile.txt  status.sqlite
fpga_pico_loader/: README.md
fpga_pico_loader/pico/stage3/: CMakeLists.txt  README.md  bootloader.c  test_sender.py
icebreaker/: Makefile  README.md  aes_enc128.v  aes_simple.v  aes_wrapper.v  auth_calc.sby  auth_calc.v  chacha20_compact.v  lfsr.sby  lfsr.v  test_auth.py  top.sby  top.v  top_aes.v  top_old.v  uart_rx.sby  uart_rx.v  uart_tx.sby  uart_tx.v
icebreaker_uart/: Makefile  README.md  icebreaker.pcf  lfsr.v  test_auth.py  top.v  uart_control.json
legitimate_user/: build.sh  send_encrypted.py  test_encryption.py
pico_dnp3_test/: pico_dnp3_test.ino
pico_swd_bridge/: README.md  pico_swd_bridge.ino
pico_uart_test/: pico_uart_test.ino
(+71 files in other folders)
